--- a/greenatom/director/templates/director/base.html
+++ b/greenatom/director/templates/director/base.html
@@ -24,20 +24,8 @@
 
         <div class="collapse navbar-collapse" id="navbarsExample03">
 
-        <ul class="navbar-nav mr-auto">
-
-          <li class="nav-item">
-            <a class="nav-link text-light" href="#Home">Хранилище<span class="sr-only">(current)</span></a>
-          </li>
-
-        </ul>
-
-        <form class="form-inline my-2 my-md-0">
-
-          <button class="btn btn-danger my-2 my-sm-0" type="submit">Выйти</button>
-
-        </form>
-
+        {% block menu %}
+        {% endblock %}
       </div>
 
     </nav>
