--- a/greenatom/employee/templates/employee/base.html
+++ b/greenatom/employee/templates/employee/base.html
@@ -26,7 +26,7 @@
         <ul class="navbar-nav mr-auto">
 
           <li class="nav-item">
-            <a class="nav-link text-light" href="#Home">Хранилище<span class="sr-only">(current)</span></a>
+            <a class="nav-link text-light" href="{% url 'storage' %}">Хранилище<span class="sr-only">(current)</span></a>
           </li>
 
         </ul>
