--- a/greenatom/employee/templates/employee/j_d_form.html
+++ b/greenatom/employee/templates/employee/j_d_form.html
@@ -12,7 +12,7 @@
               {% csrf_token %}
               <div class="form-group">
                 <label for="exampleInputEmail1">Имя работника:</label>
-                <input type="text" class="form-control" placeholder="Фамилия имя отчество" name="emp_name">
+                <input type="text" class="form-control" placeholder="Фамилия имя отчество" name="name">
               </div>
 
               <div class="form-group">
