--- a/greenatom/employee/templates/employee/j_d_form.html
+++ b/greenatom/employee/templates/employee/j_d_form.html
@@ -7,17 +7,24 @@
 
             <h2 class="locatedCenter">Форма создания ДИ:</h2>
             <hr class="indentation">
-
+              {% if errors %}
+                <p class="alert alert-danger border-danger">
+                {% for error in errors %}
+                    {{ error }}
+                    <br>
+                {% endfor %}
+                 </p>
+            {% endif %}
             <form method="post" action="create_j_d">
               {% csrf_token %}
               <div class="form-group">
                 <label for="exampleInputEmail1">Имя работника:</label>
-                <input type="text" class="form-control" placeholder="Фамилия имя отчество" name="name">
+                <input type="text" class="form-control" placeholder="Фамилия имя отчество" name="name" value="{{ surname }} {{ name }} {{ third_name }}">
               </div>
 
               <div class="form-group">
                 <label for="exampleInputPassword1">Информация о работнике:</label>
-                <input type="text" class="form-control" placeholder="Введите ключевые слова о работнике" name="key-words">
+                <input type="text" class="form-control" placeholder="Введите ключевые слова о работнике" name="key_words" value="{{ key_words }}">
               </div>
 
               <div>
@@ -68,12 +75,11 @@
                 <div class="container col-auto my-1">
                   <label class="mr-sm-2" for="inlineFormCustomSelect">Специальность:</label>
                   <select class="custom-select mr-sm-2" id="inlineFormCustomSelect" name="specialization">
-                    <option value="1">Frontend разработчик</option>
-                    <option value="2">Backend разработчик</option>
-                    <option value="3">Fullstack разработчик</option>
-                    <option value="3">QA</option>
-                    <option value="3">UX/UI</option>
-                    <option value="3">Аналитик</option>
+                    {% for i in spec_names %}
+
+                    <option value="{{ i }}">{{i}}</option>
+
+                    {% endfor %}
                   </select>
                 </div>
 
