--- a/greenatom/director/templates/director/storage.html
+++ b/greenatom/director/templates/director/storage.html
@@ -67,10 +67,10 @@
                 <input style="display: none; width:0px; height:0" type="hidden" class="form-control" placeholder="Введите пароль" name="id" value="{{ key.id }}">
                 <button type="submit" class="btn btn-secondary">Редактировать</button>
               </form>
-              <form method="POST"  class="inline">
+              <form method="POST"  class="inline" action="../../employee/media/{{ key.id }}.doc">
                 {% csrf_token %}
                 <input style="display: none; width:0px; height:0" type="hidden" class="form-control" placeholder="Введите пароль" name="id" value="{{ key.id }}">
-                <a href="../../{{ key.id }}.doc" download><button type="submit" class="btn btn-primary">word</button></a>
+                <a href="../../employee/media/{{ key.id }}.doc" download><button type="submit" class="btn btn-primary">word</button></a>
               </form>
               <form method="POST" class="inline">
                 {% csrf_token %}
