--- a/greenatom/employee/templates/employee/j_d_form.html
+++ b/greenatom/employee/templates/employee/j_d_form.html
@@ -32,27 +32,33 @@
                 <div class="container col-auto my-1">
                   <label class="mr-sm-2" for="inlineFormCustomSelect">Группа:</label>
                   <select class="custom-select mr-sm-2" id="inlineFormCustomSelect" name="group">
-                    <option value="1">один</option>
-                    <option value="2">два</option>
-                    <option value="3">три</option>
+                    {% for i in group_name %}
+
+                    <option value="{{ i }}">{{i}}</option>
+
+                    {% endfor %}
                   </select>
                 </div>
 
                 <div class="container col-auto my-1">
                   <label class="mr-sm-2" for="inlineFormCustomSelect">Отдел:</label>
                   <select class="custom-select mr-sm-2" id="inlineFormCustomSelect" name="depart">
-                    <option value="1">один</option>
-                    <option value="2">два</option>
-                    <option value="3">три</option>
+                    {% for i in depart_name %}
+
+                    <option value="{{ i }}">{{i}}</option>
+
+                    {% endfor %}
                   </select>
                 </div>
 
                 <div class="container col-auto my-1">
                   <label class="mr-sm-2" for="inlineFormCustomSelect">Центр:</label>
                   <select class="custom-select mr-sm-2" id="inlineFormCustomSelect" name="center">
-                    <option value="1">один</option>
-                    <option value="2">два</option>
-                    <option value="3">три</option>
+                    {% for i in center_name %}
+
+                    <option value="{{ i }}">{{i}}</option>
+
+                    {% endfor %}
                   </select>
                 </div>
 
